# face-blurrer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
plan/: improvements.md
