[project]
name = "face-blurrer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "supervision>=0.25.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.162",
]

[dependency-groups]
dev = ["ruff>=0.12.2"]
